add api key and export function

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <div class="container">
       <h1>Type in your ailment and find a doctor</h1>
-      <label for="ailment">Enter a ailment:</label>
-      <input id="ailment" type="text">
+      <label for="medicalIssue">Enter a medical issue:</label>
+      <input id="medicalIssue" type="text">
       <br><br>
       <button class="btn-success" id="weather-location">Find doctor</button>
       <div class="showDoctor">
