add object creation

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <label for="medicalIssue">Enter a medical issue:</label>
       <input id="medicalIssue" type="text">
       <br><br>
-      <button class="btn-success" id="weather-location">Find doctor</button>
-      <div class="showDoctor">
+      <button class="btn-success" id="submitIssue">Find doctor</button>
+      <div id="showDoctors">
       </div>
     </div>
   </body>
