--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <input id="medicalIssue" type="text">
       <br><br>
       <button class="btn-success" id="submitIssue">Find doctor</button>
-      <div id="showDoctors">
+      <div>
+        <ul id="showDoctors">
+        </ul>
       </div>
     </div>
   </body>
