--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <title></title>
   </head>
   <body>
-    <div class="container">
-      <h1>Type in your ailment and find a doctor</h1>
+    <div class="jumbotron">
+
+      <h1>Doctor Search</h1>
       <label for="medicalIssue">Enter a medical issue:</label>
       <input id="medicalIssue" type="text">
       <br><br>
-      <button class="btn-success" id="submitIssue">Find doctor</button>
-      <div>
-        <ul id="showDoctors">
-        </ul>
-      </div>
+      <button class="btn btn-info" id="submitIssue">Find doctor</button>
+    </div>
+    <div>
+      <ul id="showDoctors">
+      </ul>
     </div>
   </body>
 </html>
